Header spacing fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,8 @@
 	  font-family: 'OpenSansRegular', Arial, sans-serif;
     }
 	
+	h2 {margin-bottom:35px;}
+	
 	/* FONTS
     -------------------------------------------------- */
 
